texte confirmation opérateur

--- a/app/views/members/index.html
+++ b/app/views/members/index.html
@@ -35,7 +35,7 @@
           <td class="texte">{$member->nom}</td>
           <td class="texte">{$member->prenom}</td>
           <td><a href="member_controller.php?action=edit&id={$member->id}" class="edit" title="Modifier ce stagiaire"></a></td>
-          <td><a href="member_controller.php?action=destroy&id={$member->id}" class="bin" title="Supprimer ce stagiaire" data-warning="Tu vas supprimer cet adhérent et toutes ses inscriptions stage associées. Es-tu sûr ?"></a></td>
+          <td><a href="member_controller.php?action=destroy&id={$member->id}" class="bin" title="Supprimer ce stagiaire" data-warning="Tu vas supprimer ce stagiaire et toutes ses inscriptions stage associées. T'es sûr de ton coup ?"></a></td>
         </tr>
         {/foreach}
       </tbody>
