--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -36,7 +36,7 @@
             <td>{$event->datedebut}</td>
             <td>{$event->datefin}</td>
             <td><a href="event_controller.php?action=edit&id={$event->id}" class="edit" title="modifier ce stage"></a></td>
-            <td><a href="event_controller.php?action=destroy&id={$event->id}" class="bin" title="Supprimer ce stage" data-warning="Tu vas supprimer ce stages et toutes les inscriptions associées. Es-tu sûr ?"></a></td>
+            <td><a href="event_controller.php?action=destroy&id={$event->id}" class="bin" title="Supprimer ce stage" data-warning="Tu vas supprimer ce stages et toutes les inscriptions associées. T'es sûr de ton coup ?"></a></td>
         </tr>
         {/foreach}
       </tbody>
