--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -27,9 +27,10 @@ tbody tr:nth-child(odd){
 th, td{
   padding:1em;
   border:none;
+  text-align:center;
 }
 .inscrit_pour_tri{display:none}
-td.inscription{text-align:center}
+td.texte{text-align:left}
 
 label{
   display:inline-block;
