--- a/app/views/events/edit.html
+++ b/app/views/events/edit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Modifier un stage</title>
+    <title>Edit an event</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
@@ -17,23 +17,23 @@
       </ul>
     </nav>
 
-    <h1>Modifier un stage</h1>
+    <h1>Edit an event</h1>
 
     <form action="../controllers/event_controller.php?action=update&id={$event->id}" method="post">
       <div>
-        <label>Masquer</label>
+        <label>Hide</label>
         <input type="checkbox" name="masque" value="1" {($event->masque == '1') ? "checked='checked'" : ''} />
       </div>
       <div>
-        <label>Nom</label>
+        <label>Event name</label>
         <input type="text" name="lieu" value="{$event->lieu}" />
       </div>
       <div>
-        <label>Début du stage</label>
+        <label>Event start date</label>
         <input id="datedebut" type="date" name="datedebut" value="{$event->datedebut}" />
       </div>
       <div>
-        <label>Fin du stage</label>
+        <label>Event end date</label>
         <input id="datefin" type="date" name="datefin" value="{$event->datefin}" />
       </div>
 
