--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : La liste des stages</title>
+    <title>List of events</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
   <body>
     <nav>
       <ul>
-        <li><a href="../controllers/event_controller.php?action=new">Nouveau stage</a></li>
-        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
-        <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+        <li><a href="../controllers/event_controller.php?action=new">New event</a></li>
+        <li><a href="../controllers/member_controller.php">Members</a></li>
+        <li><a href="../controllers/events_member_controller.php">Subscriptions</a></li>
       </ul>
     </nav>
 
-    <h1>La liste des stages</h1>
+    <h1>List of events</h1>
 
     <table data-tablesaw-sortable data-tablesaw-no-labels>
       <thead>
         <tr>
-          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Nom</th>
-          <th data-tablesaw-sortable-col>Du...</th>
-          <th>au...</th>
+          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Event name</th>
+          <th data-tablesaw-sortable-col>From...</th>
+          <th>to...</th>
           <th>Edit</th>
           <th>Destroy</th>
         </tr>
@@ -32,7 +32,7 @@
       <tbody>
         {foreach from=$events item=event}
         <tr>
-            <td>{$event->lieu}</td>
+            <td class="texte">{$event->lieu}</td>
             <td>{$event->datedebut}</td>
             <td>{$event->datefin}</td>
             <td><a href="event_controller.php?action=edit&id={$event->id}" class="edit" title="Edit this event"></a></td>
