--- a/app/views/events/new.html
+++ b/app/views/events/new.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Nouveau stage</title>
+    <title>New event</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
@@ -11,25 +11,25 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../controllers/event_controller.php">Les stages</a></li>
-        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
-        <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+        <li><a href="../controllers/event_controller.php">Events</a></li>
+        <li><a href="../controllers/member_controller.php">Members</a></li>
+        <li><a href="../controllers/events_member_controller.php">Subscriptions</a></li>
       </ul>
     </nav>
 
-    <h1>Nouveau stage</h1>
+    <h1>New event</h1>
 
     <form action="../controllers/event_controller.php?action=create" method="POST">
       <div>
-        <label>Nom</label>
+        <label>Event name</label>
         <input type="text" name="lieu" value="{$event->lieu}" />
       </div>
       <div>
-        <label>Début du stage</label>
+        <label>Event start date</label>
         <input id="datedebut" type="date" name="datedebut" value="{$event->datedebut}" />
       </div>
       <div>
-        <label>Fin du stage</label>
+        <label>Event end date</label>
         <input id="datefin" type="date" name="datefin" value="{$event->datefin}" />
       </div>
 
