--- a/app/views/events_members/edit.html
+++ b/app/views/events_members/edit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Modifier un stagiaire</title>
+    <title>Edit a subscription</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
@@ -16,7 +16,7 @@
       </ul>
     </nav>
 
-    <h1>Modifier l'inscription de {$events_member->prenom} {$events_member->nom}<br />pour le stage&nbsp;: {$events_member->lieu}</h1>
+    <h1>Edit the subscription of {$events_member->prenom} {$events_member->nom}<br />to the event&nbsp;: {$events_member->lieu}</h1>
 
     <form action="../controllers/events_member_controller.php?action=update&id={$events_member->id}" method="post">
       <div>
