--- a/app/views/members/new.html
+++ b/app/views/members/new.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Nouveau stagiaires</title>
+    <title>New member</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
@@ -11,21 +11,21 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../controllers/event_controller.php">Les stages</a></li>
-        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
-        <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+        <li><a href="../controllers/event_controller.php">Events</a></li>
+        <li><a href="../controllers/member_controller.php">Members</a></li>
+        <li><a href="../controllers/events_member_controller.php">Subscriptions</a></li>
       </ul>
     </nav>
 
-    <h1>Nouveau stagiaire</h1>
+    <h1>New member</h1>
 
     <form action="../controllers/member_controller.php?action=create" method="POST">
       <div>
-        <label>Nom</label>
+        <label>Last name</label>
         <input type="text" name="nom" />
       </div>
       <div>
-        <label>Prénom</label>
+        <label>First name</label>
         <input type="text" name="prenom" />
       </div>
 
