--- a/app/views/members/new.html
+++ b/app/views/members/new.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Nouveau stagiaires</title>
+    <title>Oxygène : Nouveau stagiaire</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
@@ -19,7 +19,7 @@
 
     <h1>Nouveau stagiaire</h1>
 
-    <form action="../controllers/member_controller.php?action=create" method="POST">
+    <form action="../controllers/member_controller.php?action=create" method="post">
       <div>
         <label>Nom</label>
         <input type="text" name="nom" />
