--- a/app/views/events_members/edit.html
+++ b/app/views/events_members/edit.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Modifier un stagiaire</title>
+    <title>Oxygène : Modifier une inscription</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
