--- a/app/views/members/index.html
+++ b/app/views/members/index.html
@@ -12,6 +12,7 @@
     <nav>
       <ul>
         <li><a href="../controllers/member_controller.php?action=new">Nouveau stagiaire</a></li>
+        <li><a href="../controllers/niveau_controller.php">Les niveaux</a></li>
         <li><a href="../controllers/event_controller.php">Les stages</a></li>
         <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
       </ul>
