--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Subscribe to an event</title>
+    <link rel="javascript" href="../assets/javascripts/events_members.js" />
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
