les id d'inscriptions sont décalés
l'ajout del'indicateur d'inscription au dernier stage dans la requête
SQL a décalé les données

--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -34,7 +34,7 @@
         <tr>
           <td class="texte"><a href="../controllers/member_controller.php?action=edit&id={$subscription['member_id']}">{$subscription['nom']}</a></td>
           <td class="texte">{$subscription['prenom']}</td>
-          {for $i=0 to count($events)-1}
+          {for $i=1 to count($events)}
             {if ($subscription[$i] > 0)}
               <!-- le membre est inscrit à ce stage -->
               <td class="inscription">
