--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -34,12 +34,13 @@
         <tr>
           <td class="texte"><a href="../controllers/member_controller.php?action=edit&id={$subscription['member_id']}">{$subscription['nom']}</a></td>
           <td class="texte">{$subscription['prenom']}</td>
-          {for $i=1 to count($events)}
-            {if ($subscription[$i] > 0)}
+          {for $i=0 to count($events)-1}
+
+            {if ($subscription[$i+1] > 0)}
               <!-- le membre est inscrit à ce stage -->
               <td class="inscription">
                 <span class="inscrit_pour_tri">2</span>
-                <input type="checkbox" id="{$subscription[$i]}" value="" checked="checked">
+                <input type="checkbox" id="{$subscription[$i+1]}" data-member_id="{$subscription['member_id']}" data-event_id="{$events[$i]->id}" value="" checked="checked">
                 <a href="events_member_controller.php?action=edit&id={$subscription[$i]}" class="edit"></a>
               </td>
             {else}
