--- a/app/views/members/new.html
+++ b/app/views/members/new.html
@@ -58,7 +58,7 @@
       </div>
       <div>
         <label>niveau</label>
-        {html_options name=niveau options=$niveaux selected=$mon_niveau}
+        {html_options name=niveau options=$niveaux}
       </div>
       <div>
         <label>photo</label>
