afficher le nombre d'inscrits aux stages
on modifie la vue active_events pour qu'elle collecte le nombre
d'inscrits

--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -24,7 +24,7 @@
           <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Nom</th>
           <th data-tablesaw-sortable-col>Prénom</th>
           {foreach from=$events item=event}
-            <th data-tablesaw-sortable-col>{$event->lieu}</th>
+            <th data-tablesaw-sortable-col>{$event->lieu}<br />{$event->nb_inscrits} inscrits</th>
           {/foreach}
         </tr>
       </thead>
