--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,13 @@
 body {
   font:16px Arial, sans-serif;
+  padding:0;
+  margin:0;
 }
 h1{text-align:center}
 nav ul{
+  margin:0;
   padding:0;
-  background: #dbb;
+  background: #3c9bed;
 }
 nav li{
   display: inline-block;
@@ -15,6 +18,7 @@ nav li:hover{
 nav a{
   display:block;
   padding:1em;
+  color:white;
   text-decoration: none;
 }
 table{
@@ -22,23 +26,29 @@ table{
   border:none;
 }
 tbody tr:nth-child(odd){
-  background:#ddd;
+  background:#edf4f9;
 }
 th, td{
-  padding:1em;
+  padding:.6em;
   border:none;
   text-align:center;
 }
 .inscrit_pour_tri{display:none}
 td.texte{text-align:left}
 
+form{
+  padding:5%;
+}
 label{
   display:inline-block;
   width:10em;
-  margin:0.5em 0;
+  margin:1% 0;
   }
 label:first-letter{
   text-transform:capitalize;
+}
+input[type=submit]{
+  margin-top:3%;
 }
 .edit, .bin{
   display:inline-block;
