--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -17,7 +17,7 @@
 
     <h1>Les inscriptions aux stages</h1>
 
-    <form>
+    <form class="subscriptions">
     <table data-tablesaw-sortable data-tablesaw-no-labels>
       <thead>
         <tr>
