--- a/app/views/events_members/index.html
+++ b/app/views/events_members/index.html
@@ -3,28 +3,28 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : S'inscrire aux stages</title>
+    <title>Subscribe to events</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
   <body>
     <nav>
       <ul>
-        <li><a href="../controllers/event_controller.php">Les stages</a></li>
-        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
+        <li><a href="../controllers/event_controller.php">Events</a></li>
+        <li><a href="../controllers/member_controller.php">Members</a></li>
       </ul>
     </nav>
 
-    <h1>Les inscriptions aux stages</h1>
+    <h1>Subscriptions</h1>
 
     <form class="subscriptions">
     <table data-tablesaw-sortable data-tablesaw-no-labels>
       <thead>
         <tr>
-          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Nom</th>
-          <th data-tablesaw-sortable-col>Prénom</th>
+          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Last name</th>
+          <th data-tablesaw-sortable-col>First name</th>
           {foreach from=$events item=event}
-            <th data-tablesaw-sortable-col>{$event->lieu}<br />{$event->nb_inscrits} inscrits</th>
+            <th data-tablesaw-sortable-col>{$event->lieu}</th>
           {/foreach}
         </tr>
       </thead>
@@ -37,14 +37,14 @@
           {for $i=0 to count($events)-1}
 
             {if ($subscription[$i+1] > 0)}
-              <!-- le membre est inscrit à ce stage -->
+              <!-- member subscribed to this event -->
               <td class="inscription">
                 <span class="inscrit_pour_tri">2</span>
                 <input type="checkbox" id="{$subscription[$i+1]}" data-member_id="{$subscription['member_id']}" data-event_id="{$events[$i]->id}" value="" checked="checked">
                 <a href="events_member_controller.php?action=edit&id={$subscription[$i+1]}" class="edit"></a>
               </td>
             {else}
-              <!-- le membre n'est pas inscrit à ce stage -->
+              <!-- member not subscribed to this event -->
               <td class="inscription">
                 <span class="inscrit_pour_tri">1</span>
                 <input type="checkbox" data-member_id="{$subscription['member_id']}" data-event_id="{$events[$i]->id}" value="">
