--- a/app/views/members/edit.html
+++ b/app/views/members/edit.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : Modifier un stagiaire</title>
+    <title>Edit a member</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
     <link rel="stylesheet" href="../assets/stylesheets/jquery-ui-1.11.4.custom/jquery-ui.css" />
   </head>
@@ -11,82 +11,26 @@
   <body>
     <nav>
       <ul>
-        <li><a href="../controllers/event_controller.php">Les stages</a></li>
-        <li><a href="../controllers/member_controller.php">Les stagiaires</a></li>
-        <li><a href="../controllers/events_member_controller.php">Les inscriptions</a></li>
+        <li><a href="../controllers/event_controller.php">Events</a></li>
+        <li><a href="../controllers/member_controller.php">Members</a></li>
+        <li><a href="../controllers/events_member_controller.php">subscriptions</a></li>
       </ul>
     </nav>
 
-    <h1>Modifier un stagiaire</h1>
+    <h1>Edit a member</h1>
 
     <form action="../controllers/member_controller.php?action=update&id={$member->id}" method="post">
       <div>
-        <label>Masquer</label>
+        <label>Hide</label>
         <input type="checkbox" name="masque" value="1" {($member->masque == '1') ? "checked='checked'" : ''} />
       </div>
       <div>
-        <label>Nom</label>
+        <label>Last Name</label>
         <input type="text" name="nom" value="{$member->nom}" />
       </div>
       <div>
-        <label>Prénom</label>
+        <label>First name</label>
         <input type="text" name="prenom" value="{$member->prenom}" />
-      </div>
-      <div>
-        <label>date de naissance</label>
-        <input id="datenaissance" type="date" name="datenaissance" value="{$member->datenaissance}" />
-      </div>
-      <div>
-        <label>adresse</label>
-        <input type="text" name="adresse" value="{$member->adresse}" />
-      </div>
-      <div>
-        <label>CP</label>
-        <input type="text" name="cp" value="{$member->cp}" />
-      </div>
-      <div>
-        <label>ville</label>
-        <input type="text" name="ville" value="{$member->ville}" />
-      </div>
-      <div>
-        <label>email</label>
-        <input type="text" name="email" value="{$member->email}" />
-      </div>
-      <div>
-        <label>tel fixe</label>
-        <input type="text" name="telfixe" value="{$member->telfixe}" />
-      </div>
-      <div>
-        <label>tel portable</label>
-        <input type="text" name="telportable" value="{$member->telportable}" />
-      </div>
-      <div>
-        <label>niveau</label>
-        {html_options name=niveau options=$niveaux selected=$mon_niveau}
-      </div>
-      <div>
-        <label>photo</label>
-        <input type="text" name="photo" value="{$member->photo}" />
-      </div>
-      <div>
-        <label>observation</label>
-        <input type="text" name="observation" value="{$member->observation}" />
-      </div>
-      <div>
-        <label>date adhésion</label>
-        <input id="date_adh" type="date" name="date_adh" value="{$member->date_adh}" />
-      </div>
-      <div>
-        <label>mono</label>
-        <input type="text" name="mono" value="{$member->mono}" />
-      </div>
-      <div>
-        <label>diplôme</label>
-        <input type="text" name="diplome" value="{$member->diplome}" />
-      </div>
-      <div>
-        <label>photo2</label>
-        <input type="text" name="photo2" value="{$member->photo2}" />
       </div>
 
       <input type="submit">
