--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Oxygène : La liste des stages</title>
+    <title>The events</title>
     <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
@@ -16,16 +16,16 @@
       </ul>
     </nav>
 
-    <h1>La liste des stages</h1>
+    <h1>The events</h1>
 
     <table data-tablesaw-sortable data-tablesaw-no-labels>
       <thead>
         <tr>
-          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Nom</th>
-          <th data-tablesaw-sortable-col>Du...</th>
-          <th>au...</th>
-          <th>Modifier</th>
-          <th>Supprimer</th>
+          <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Event name</th>
+          <th data-tablesaw-sortable-col>From...</th>
+          <th>to...</th>
+          <th>Edit</th>
+          <th>Destroy</th>
         </tr>
       </thead>
 
@@ -35,8 +35,8 @@
             <td class="texte">{$event->lieu}</td>
             <td>{$event->datedebut}</td>
             <td>{$event->datefin}</td>
-            <td><a href="event_controller.php?action=edit&id={$event->id}" class="edit" title="modifier ce stage"></a></td>
-            <td><a href="event_controller.php?action=destroy&id={$event->id}" class="bin" title="Supprimer ce stage" data-warning="Tu vas supprimer ce stages et toutes les inscriptions associées. T'es sûr de ton coup ?"></a></td>
+            <td><a href="event_controller.php?action=edit&id={$event->id}" class="edit" title="edit this event"></a></td>
+            <td><a href="event_controller.php?action=destroy&id={$event->id}" class="bin" title="destroy this event" data-warning="you are going to destroy this event and all related subscriptions. Are you sure?"></a></td>
         </tr>
         {/foreach}
       </tbody>
