--- a/app/views/members/index.html
+++ b/app/views/members/index.html
@@ -3,7 +3,7 @@
 
   <head>
       <meta charset="utf-8" />
-      <title>Oxygène : La liste des stagiaires</title>
+      <title>Liste of members</title>
       <link rel="stylesheet" href="../assets/stylesheets/style.css" />
   </head>
 
@@ -18,16 +18,16 @@
       </ul>
     </nav>
 
-    <h1>La liste des stagiaires</h1>
+    <h1>List of members</h1>
 
     <table data-tablesaw-sortable data-tablesaw-no-labels>
       <thead>
         <tr>
           <th data-tablesaw-sortable-col data-tablesaw-sortable-default-col>Nom</th>
           <th data-tablesaw-sortable-col>Prénom</th>
-          <th>Masqué ?</th>
-          <th>Modifier</th>
-          <th>Supprimer</th>
+          <th>Hidden?</th>
+          <th>Edit</th>
+          <th>Destroy</th>
         </tr>
       </thead>
 
@@ -45,8 +45,8 @@
 
           {/if}
 
-          <td><a href="member_controller.php?action=edit&id={$member->id}" class="edit" title="Modifier ce stagiaire"></a></td>
-          <td><a href="member_controller.php?action=destroy&id={$member->id}" class="bin" title="Supprimer ce stagiaire" data-warning="Tu vas supprimer ce stagiaire et toutes ses inscriptions stage associées. T'es sûr de ton coup ?"></a></td>
+          <td><a href="member_controller.php?action=edit&id={$member->id}" class="edit" title="Edit this member"></a></td>
+          <td><a href="member_controller.php?action=destroy&id={$member->id}" class="bin" title="Destroy this member" data-warning="You are going to destroy this member and all related subscriptions. Are you sure?"></a></td>
         </tr>
         {/foreach}
       </tbody>
